Last changes of first part

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>Museo del Fútbol</title>
     <link rel = "shortcut icon" href="img/favicon.ico">
 
+    <link href='https://fonts.googleapis.com/css?family=Molengo' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Graduate' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Hammersmith One' rel='stylesheet'>
+
     <link href="styles/style.css"
           rel="stylesheet" type="text/css">
 </head>
@@ -12,18 +16,23 @@
 
     <!--CABECERA-->
     <div class="header-container">
-        <div class="header-icon">
-            <img class="logo" src="img/RFEF_logo.png">
+        <div class="fit-icon">
+            <div class="header-icon">
+                <a href="index.html">
+                    <img class="logo" src="img/RFEF_logo.png">
+                </a>
+            </div>
         </div>
         <div class="header-title">
-
-            <h1 class>MUSEO DEL FÚTBOL ESPAÑOL</h1>
+            <div class="title">
+                <h1>Museo del Futbol Español</h1>
+            </div>
             <!--MENU-->
             <div class="header-menu">
                 <nav>
-                    <a href="">HTML</a> |
-                    <a href="">CSS</a> |
-                    <a href="">JavaScript</a>
+                    <a href="#" class="header-menu active">Inicio</a>
+                    <a href="" class="header-menu">Entradas</a>
+                    <a href="" class="header-menu">Contacto</a>
                 </nav>
             </div>
         </div>
@@ -33,242 +42,262 @@
     <div class="cuerpo-container">
         <!--ENLACES DE INTERES-->
         <div class="elements-container">
-            <h1 class>MUSEO</h1>
+            <div class="elements-menu">
+                <div class="elements-title">
+                    <h2>Enlaces de Interés</h2>
+                </div>
+
+                <nav>
+                    <ul>
+                        <li><a href="http://www.laliga.es">La Liga</a></li>
+                        <li><a href="http://www.rfef.es">RFEF</a></li>
+                        <li><a href="https://es.uefa.com/index.html">UEFA</a></li>
+                        <li><a href="http://es.fifa.com/">FIFA</a></li>
+                    </ul>
+
+                </nav>
+            </div>
         </div>
 
         <!--OBRAS-->
         <div class="pictures-container">
 
+            <div class="pictures-title">
+                <h2>Secciones</h2>
+            </div>
             <!-- Fila 1 -->
+
             <div class="fila">
-                <div class="elemento">
-                    <a href="alaves.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/Alaves.png">
+                            <a href="html/alaves.html"><img class="escudo-elemento" src="img/Alaves.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Deportivo Alaves</p>
+                            <p><a href="html/alaves.html">Deportivo Alaves</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="elemento">
-                    <a href="athletic.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/Athletic.png">
+                            <a href="html/athletic.html"><img class="escudo-elemento" src="img/Athletic.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Athletic Bilbao</p>
+                            <p><a href="html/athletic.html">Athletic Club Bilbao</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="elemento">
-                    <a href="atletico.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/atleticomadrid.png">
+                            <a href="html/atletico.html"><img class="escudo-elemento" src="img/atleticomadrid.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Atletico de Madrid</p>
+                            <p><a href="html/atletico.html">Atletico de Madrid</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
 
             <!-- Fila 2 -->
+
             <div class="fila">
-                <div class="elemento">
-                    <a href="barcelona.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/barcelona.png">
+                            <a href="html/barcelona.html"><img class="escudo-elemento" src="img/barcelona.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>FC Barcelona</p>
+                            <p><a href="html/barcelona.html">FC Barcelona</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="elemento">
-                    <a href="betis.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/betis.png">
+                            <a href="html/betis.html"><img class="escudo-elemento" src="img/betis.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Real Betis</p>
+                            <p><a href="html/betis.html">Real Betis</a></p>
                         </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
-                <div class="elemento">
-                    <a href="celta.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/celta.png">
+                            <a href="html/celta.html"><img class="escudo-elemento" src="img/celta.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Celta de Vigo</p>
+                            <p><a href="html/celta.html">Celta de Vigo</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
 
             <!-- Fila 3 -->
-
             <div class="fila">
-                <div class="elemento">
-                    <a href="deportivo.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/depor.png">
+                            <a href="html/depor.html"><img class="escudo-elemento" src="img/depor.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Deportivo de La Coruña</p>
+                            <p><a href="html/depor.html">Deportivo de la Coruña</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="elemento">
-                    <a href="eibar.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/eibar.png">
+                            <a href="html/eibar.html"><img class="escudo-elemento" src="img/eibar.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Eibar</p>
+                            <p><a href="html/eibar.html">SD Eibar</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="elemento">
-                    <a href="espanyol.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/espanyol.png">
+                            <a href="html/espanyol.html"><img class="escudo-elemento" src="img/espanyol.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Espanyol</p>
+                            <p><a href="html/espanyol.html">RCD Espanyol</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
 
             <!-- Fila 4 -->
 
             <div class="fila">
-                <div class="elemento">
-                    <a href="getafe.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/getafe.png">
+                            <a href="html/getafe.html"><img class="escudo-elemento" src="img/getafe.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Getafe</p>
+                            <p><a href="html/getafe.html">Getafe CF</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="elemento">
-                    <a href="girona.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/girona.png">
+                            <a href="html/girona.html"><img class="escudo-elemento" src="img/girona.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Girona</p>
+                            <p><a href="html/girona.html">Girona FC</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="elemento">
-                    <a href="laspalmas.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/lasPalmas.png">
+                            <a href="html/laspalmas.html"><img class="escudo-elemento" src="img/lasPalmas.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Las Palmas</p>
+                            <p><a href="html/laspalmas.html">UD Las Palmas</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
 
             <!-- Fila 5 -->
 
             <div class="fila">
-                <div class="elemento">
-                    <a href="leganes.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/leganes.png">
+                            <a href="html/leganes.html"><img class="escudo-elemento" src="img/leganes.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Leganes</p>
+                            <p><a href="html/leganes.html">CD Leganes</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="elemento">
-                    <a href="levante.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/levante.png">
+                            <a href="html/levante.html"><img class="escudo-elemento" src="img/levante.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Levante</p>
+                            <p><a href="html/levante.html">Levante UD</a></p>
                         </div>
-                    </a>
+                        </a>
+                    </div>
                 </div>
-                <div class="elemento">
-                    <a href="malaga.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/malaga.png">
+                            <a href="html/malaga.html"><img class="escudo-elemento" src="img/malaga.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Málaga</p>
+                            <p><a href="html/malaga.html">Málaga CF</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
 
             <!-- Fila 6 -->
 
             <div class="fila">
-                <div class="elemento">
-                    <a href="realmadrid.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/realmadrid.png">
+                            <a href="html/realmadrid.html"><img class="escudo-elemento" src="img/realmadrid.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Real Madrid</p>
+                            <p><a href="html/realmadrid.html">Real Madrid</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="elemento">
-                    <a href="realsociedad.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/realsociedad.png">
+                            <a href="html/realsociedad.html"><img class="escudo-elemento" src="img/realsociedad.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Real Sociedad</p>
+                            <p><a href="html/realsociedad.html">Real Sociedad</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="elemento">
-                    <a href="sevilla.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/sevilla.png">
+                            <a href="html/sevilla.html"><img class="escudo-elemento" src="img/sevilla.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Sevilla</p>
+                            <p><a href="html/sevilla.html">Sevilla</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
 
             <!-- Fila 7 -->
 
             <div class="fila">
-                <div class="elemento">
-                    <a href="valencia.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/valencia.png">
+                            <a href="html/valencia.html"><img class="escudo-elemento" src="img/valencia.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Deportivo de La Coruña</p>
+                            <p><a href="html/valencia.html">Valencia CF</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
-                <div class="elemento">
-                    <a href="villarreal.html">
+                <div class="elemento-box">
+                    <div class="elemento">
                         <div class="imagen-elemento">
-                            <img class="escudo-elemento" src="img/villarreal.png">
+                            <a href="html/villarreal.html"><img class="escudo-elemento" src="img/villarreal.png"></a>
                         </div>
                         <div class="nombre-elemento">
-                            <p>Villarreal</p>
+                            <p><a href="html/villarreal.html">Villarreal</a></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -276,7 +305,12 @@
 
     <!--PIE DE PAGINA-->
     <div class="footer-container">
-        <p>Copyright &copy; 2018 Ángel Robledillo Perea & Jorge Juan Ñíguez Fernandez
+        <div class="footer-redes">
+            <a href="http://www.facebook.com"><img class="icon-redes" src="img/facebook.png"></a>
+            <a href="http://www.twitter.com"><img class="icon-redes" src="img/twitter.png"></a>
+            <a href="http://plus.google.com"><img class="icon-redes" src="img/google.png"></a>
+        </div>
+        <p>Copyright &copy; 2018 Ángel Robledillo Perea & Jorge Juan Ñíguez Fernandez</p>
     </div>
 
 </body>
