--- a/P2/index.html
+++ b/P2/index.html
@@ -11,6 +11,7 @@
 
     <link href="styles/style.css"
           rel="stylesheet" type="text/css">
+    <script src="js/script-comments.js"></script>
 </head>
 <body>
 
