--- a/P1/index.html
+++ b/P1/index.html
@@ -32,7 +32,7 @@
                 <nav>
                     <a href="#" class="header-menu active">Inicio</a>
                     <a href="" class="header-menu">Entradas</a>
-                    <a href="" class="header-menu">Contacto</a>
+                    <a href="html/contacto.html" class="header-menu">Contacto</a>
                 </nav>
             </div>
         </div>
